He refactorizado el código con ayuda de SonarQube y he añadido los comentarios automáticos de JAutodoc